<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_3"
    android:layout_gravity="center"
    android:background="@color/colorFullWhite">

    <TextView
        android:id="@+id/tv_notification_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="X"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:gravity="end"/>

    <Switch
        android:id="@+id/sw_daily_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_notification_sub_title"
        android:textSize="@dimen/text_4"
        android:paddingBottom="@dimen/margin_5"
        android:textOn="@string/switch_on"
        android:textOff="@string/switch_off"/>

    <Switch
        android:id="@+id/sw_release_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_notification_control_title"
        android:textSize="@dimen/text_4"
        android:textOn="@string/switch_on"
        android:textOff="@string/switch_off"/>
</LinearLayout>