<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_3"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:drawableLeft="@drawable/ic_local_movies_black_24dp"
            android:drawableTint="@color/colorWhite"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_now_playing"
                android:textSize="@dimen/text_3"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_2"
                android:layout_marginStart="@dimen/margin_2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_home_horizontal_list"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_release"
                android:textSize="@dimen/text_3"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginStart="@dimen/margin_2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_home_horizontal_list"
                android:layout_marginBottom="@dimen/margin_1"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>